--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
            <h1>shiva</h1>
        </div>
        <div>
-            <h1>akash</h1>
+            <h1>jashwanth</h1>
        </div>
         <div>
              <h1>ashwith</h1>
