changed file name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <h1>shiva</h1>
        </div>
        <div>
-            <h1>jashwanth</h1>
+            <h1>asad</h1>
        </div>
         <div>
              <h1>ashwith</h1>
