--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   align-items: center;
 }  
 .container div {
-      border: 10px solid red;
+      border: 10px solid rgb(15, 15, 161);
       background-color:lavender;
       height: 100px;
       width: 100px;
