--- a/faizaan.html
+++ b/faizaan.html
@@ -10,7 +10,7 @@
     <title>Document</title>
     <style>
        *{
-        font-family: Arial, Helvetica, sans-seri;
+        font-family: Arial, Helvetica, sans-serif;
        }
 
        .parent-div{
