--- a/new.html
+++ b/new.html
@@ -77,5 +77,6 @@ body{
         <button> 🤍 Make a Donation</button>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html
